(lang dune 3.9)

(name vp_lifter)

(generate_opam_files true)

(source
 (github CharlesAverill/vp_lifter))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license LICENSE)

(documentation https://github.com/CharlesAverill/vp_lifter)

(using coq 0.8)

(package
 (name vp_lifter)
 (synopsis "Lifter for the VOLPLIC Pascal verifier system")
 (description "Lifter for the VOLPIC Pascal verifier system")
 (depends ocaml dune menhir ocamllex))

